# auracle

./: .gitignore  .gitmodules  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
.skills/auracle-backend/: SKILL.md
.skills/auracle-devices/: SKILL.md
.skills/auracle-docs/: SKILL.md
.skills/auracle-frontend/: SKILL.md
.skills/auracle-rust/: SKILL.md
.skills/auracle-spec/: SKILL.md
backend/: CMakeLists.txt  CMakePresets.json
backend/assigned-numbers/: CMakeLists.txt  assigned_numbers.cpp  assigned_numbers.hpp  generate.py  service_data_formats.hpp
backend/assigned-numbers/service-data-formats/: 1852_broadcast_audio_announcement.yaml  1853_common_audio_announcement.yaml  1856_public_broadcast_announcement.yaml  AUTHORING.md
backend/cli/: CMakeLists.txt
backend/cli/src/: compliance.cpp  compliance.hpp  list.cpp  list.hpp  main.cpp  options.hpp  render.cpp  render.hpp  scan.cpp  scan.hpp  watch.cpp  watch.hpp
backend/cmake/: AuracleDependencies.cmake  AuracleOptions.cmake
backend/compliance/: CMakeLists.txt
backend/compliance/include/compliance/: ast.hpp  engine.hpp  evaluator.hpp  facts.hpp  loader.hpp  normalizer.hpp  parser.hpp  repository.hpp  suite_loader.hpp  tokenizer.hpp
backend/compliance/rules/: auracast_src_001.rule  auracast_src_002.rule
backend/compliance/src/: engine.cpp  evaluator.cpp  loader.cpp  normalizer.cpp  parser.cpp  repository.cpp  suite_loader.cpp  tokenizer.cpp
backend/compliance/suites/: auracast_source_baseline.suite
backend/compliance/tests/: engine_test.cpp  evaluator_test.cpp  loader_test.cpp  normalizer_test.cpp  parser_test.cpp  repository_test.cpp  suite_loader_test.cpp
backend/daemon/: CMakeLists.txt
backend/daemon/src/: main.cpp
backend/dts-bluetooth/: CMakeLists.txt
backend/dts-bluetooth/include/dts/: bluetooth.hpp
backend/dts-bluetooth/src/: bluetooth_macos.mm  bluetooth_stub.cpp  scanner_macos.mm
backend/inventory/: CMakeLists.txt  candidate.hpp  events.hpp  inventory.hpp  probe_scheduler.hpp  registry.hpp  types.hpp  unit.hpp
backend/inventory/probers/: host_bluetooth_prober.hpp  mdns_agent_prober.hpp  prober.hpp  serial_agent_prober.hpp
backend/inventory/probers/src/: host_bluetooth_prober.cpp  mdns_agent_prober.cpp  serial_agent_prober.cpp
backend/inventory/providers/: host_bluetooth_provider.hpp  mdns_provider.hpp  provider.hpp  serial_provider.hpp
backend/inventory/providers/src/: host_bluetooth_provider.cpp  mdns_provider.cpp  serial_provider.cpp
backend/inventory/src/: probe_scheduler.cpp  registry.cpp
backend/observation/: CMakeLists.txt
backend/observation/include/observation/: local_bluetooth_scanner.hpp  remote_wire_scanner.hpp  scanner.hpp  scanner_manager.hpp  types.hpp
backend/observation/src/: local_bluetooth_scanner.cpp  remote_wire_scanner.cpp  scanner_manager.cpp
backend/rpc/: CMakeLists.txt  compliance_service.hpp  convert.hpp  inventory_service.hpp  observation_convert.hpp  observation_service.hpp
backend/rpc/src/: compliance_service.cpp  convert.cpp  inventory_service.cpp  observation_convert.cpp  observation_service.cpp
docs/: architecture.md  backend.md  build.md  ci-cd.md  data-models.md  design-system.md  frontend.md
docs/diagrams/: APP-2-layout-wireframe.mmd  ARCH-1-layered-architecture.mmd  ARCH-2-data-flow.mmd  BUILD-1-dev-workflow.mmd  CICD-1-pipeline.mmd  DAEMON-1-inventory-state-machine.mmd  OVR-1-system-context.mmd  WIRE-1-message-flow.mmd
docs/features/: 001-bluetooth-adapter-detection.md  001-prompt.md  002-ble-device-discovery.md  002-prompt.md  002-refinement-2-prompt.md  002-refinement-3-prompt.md  002-refinement-prompt.md  003-activity-rail-navigation.md  003-prompt.md  004-home-device-panels.md  004-refinement-prompt.md  005-wire-protocol.md
docs/ux/mainframe/: activity-rail.md
docs/work/: README.md  plan.md
firmware/esp32/apps/auracle/: CMakeLists.txt  sdkconfig.defaults
firmware/esp32/apps/auracle/main/: CMakeLists.txt  Kconfig.projbuild  bridge_server.c  bridge_server.h  captive_portal.c  captive_portal.h  device_proto.c  device_proto.h  discovery.c  discovery.h  http_server.c  http_server.h  idf_component.yml  main.c  status.c  status.h  uart_bridge.c  uart_bridge.h  uart_proto.c  uart_proto.h  wifi_manager.c  wifi_manager.h  wire_proto.c  wire_proto.h  wire_uart.c  wire_uart.h
firmware/rf5340/apps/sample/: CMakeLists.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
frontend/src-tauri/src/: ble.rs  error.rs  lib.rs  main.rs
frontend/src-tauri/src/ble/: mod.rs  scanner.rs
frontend/src-tauri/src/daemon/: mod.rs  scan_bridge.rs
frontend/src-tauri/src/devices/: mod.rs
frontend/src-tauri/src/serial/: mod.rs
frontend/src/data/: ble-company-ids.json
frontend/src/hooks/: use-theme.ts  use-zoom.ts  useBluetoothAdapter.ts  useCompliance.ts  useDevices.ts  useUnits.ts  useUpdater.ts
frontend/src/lib/: ble-utils.ts  icons.ts  tauri.ts
frontend/src/pages/: Compliance.tsx  Devices.tsx  Generators.tsx  Home.tsx  Logs.tsx  Sink.tsx  ThemeReference.tsx
hardware/bridge-audiodk/: #auto_saved_files#  _autosave-bridge-audiodk.kicad_pcb  _autosave-bridge-audiodk.kicad_sch  bridge-audiodk.kicad_pcb  bridge-audiodk.kicad_prl  bridge-audiodk.kicad_pro
hardware/nfr/: nfr-altium-import.kicad_sym  nfr.kicad_pcb  nfr.kicad_prl  nfr.kicad_pro  nfr.kicad_sch  sym-lib-table
proto/auracle/: device.proto
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/ble/: mod.rs  scanner.rs
src-tauri/src/devices/: nrf5340.rs
src/components/devices/: SignalBars.tsx
src/components/layout/: ActivityRail.tsx  Sidebar.tsx  StatusBar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  sidebar.tsx  tooltip.tsx
src/hooks/: useDevices.ts
src/lib/: tauri.ts
src/pages/: Dashboard.tsx  Devices.tsx  StreamConfig.tsx
(+33 files in other folders)
