[package]
name = "auracle"
version = "0.1.0"
description = "Auracle — BLE and serial device manager"
authors = ["Naim Audio"]
edition = "2021"

[lib]
name = "auracle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
btleplug = "0.11"
serialport = "4"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
