[package]
name = "auracle"
version = "0.1.0"
description = "Focal and Naim Auracle — BLE and serial device manager"
authors = ["Naim Audio"]
edition = "2021"

[lib]
name = "auracle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
btleplug = "0.11"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serialport = "4"
tokio = { version = "1", features = ["full"] }
thiserror = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
