[package]
name = "auracle"
version = "0.1.0"
description = "Focal & Naim Auracle — BLE and serial device manager"
authors = ["Naim Audio"]
edition = "2021"

[lib]
name = "auracle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
btleplug = "0.11"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
prost = "0.13"
serialport = "4"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
thiserror = "2"
tonic = "0.12"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
