idf_component_register(
    SRCS
        "main.c"
        "status.c"
        "uart_bridge.c"
        "bridge_server.c"
        "wifi_manager.c"
        "captive_portal.c"
        # The ESP32 now acts as a raw UART<->TCP bridge.
    INCLUDE_DIRS
        "."
    REQUIRES
        driver
        esp_driver_uart
        esp_wifi
        esp_http_server
        nvs_flash
        esp_event
        esp_netif
        espressif__mdns
        lwip
        esp_timer
)
